2003-05-28  Dennis Cranston <dennis_cranston at yahoo com>

	* gsearchtool-callbacks.c (save_results_cb):  Fix bug
	report #113868 based on patch by hidetoshi.tajima@sun.com 
	(Hidetoshi Tajima).

2003-03-16  Dennis M. Cranston <dennis_cranston at yahoo.com>

	* gsearchtool.c:  In create_constraint_box() set the 
	appropriate constraint data (text/time/number) to value.
	
2003-02-27  Dennis M. Cranston <dennis_cranston@yahoo.com>

	* gsearchtool.c:  Fix for bug report #107118 based on patch 
	from Kaushal Kumar <kaushal.kumar@wipro.com> to make the 
	'File is named' entry optional.  This means the 'Find' button 
	is sensitive by default.  
	
	* gsearchtool-callbacks.c:  Fix for bug report #107118 
	based on patch from Kaushal Kumar <kaushal.kumar@wipro.com> 
	to make the 'File is named' entry optional.
	
	* gsearchtool.c:  Include folders in search results!
	
2003-02-23  Takeshi AIHANA <aihana@gnome.gr.jp>

	* help/ja/*: added Japanese translations by
				KAMAGASAKO Masatoshi <emerald@gnome.gr.jp>.
	* help/ja/Makefile.am:  added ja into SUBDIRS.

2003-02-19  Dennis M. Cranston <dennis_cranston@yahoo.com>

	* help/C/figures/gnome-search-tool_window.png:  Updated
	screenshot.
	
2003-02-19  Dennis Cranston <dennis_cranston@yahoo.com>

	* gsearchtool.c:  Converted the search results section from 
	a frame to a vbox and increased the padding between the result's 
	label and window.  Also, added GTK_SHRINK flag to the filename
	and folder entries.
	
2003-02-17  Dennis Cranston <dennis_cranston@yahoo.com>

	* gsearchtool-support.c:  Do not exclude .gnome-desktop 
	from the search results.  Fixes bug #106153.
	
2003-01-09  Dennis Cranston <dennis_cranston@yahoo.com>

	* gsearchtool.c:  Do not use the locate command for finding
	files in the /mnt directory.
	
	* gsearchtool-support.[ch]:  Added is_path_in_mount_folder().
	
2003-01-05  Dennis Cranston <dennis_cranston@yahoo.com>

	* gsearchtool.c:  Toggle the sensitivity of the contraints
	while searching.
	