@@ -1,3 +1,10 @@
+2003-09-29  Dennis Cranston <dennis_cranston at yahoo com>
+
+	* gsearchtool.c:  Fix for a portability issue detected on 
+	AIX. See bug report 123191, "G_IO_HUP is not enough to
+	detect broken pipe".
+	(http://bugzilla.gnome.org/show_bug.cgi?id=123191)
+	
 2003-05-28  Dennis Cranston <dennis_cranston at yahoo com>
 
 	* gsearchtool-callbacks.c (save_results_cb):  Fix bug
